[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Daniil <daniel95trukhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
pydantic = "^2.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
